--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,11 +4,11 @@
   <div class="container">
     <section class="footer-bottom border-top row">
       <div class="col-md-2">
-        <p class="text-muted">&copy VaxiDrez</p>
+        <p class="text-muted">&copy YoyoDR</p>
       </div>
       <div class="col-md-8 text-md-center">
-        <span class="px-2">vaxi.drez.social@gmail.com</span>
-        <span class="px-2">+1980-986-7233</span>
+        <span class="px-2">duranyoiner86@gmail.com</span>
+        <span class="px-2">+573148743538</span>
         <span class="px-2">698 Park ST, US</span>
       </div>
       <div class="col-md-2 text-md-right text-muted">
