--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <title>YoyoDR | La mejor plataforma de venta de cursos</title>
 
     <link
-      href="{% static 'media/img/favicon.ico' %}"
+      href="{% static 'media/img/favicon.jpg' %}"
       rel="shortcut icon"
       type="image/x-icon"
     />
