--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} 
-
+{% load static %}
 {% block content %}
 <section class="section-content padding-y bg">
   <div class="container">
@@ -78,10 +78,14 @@
             {% if single_product.stock <= 0 %}
             <h5>Producto fuera de stock</h5>
             {% else %}
-            <a href="./product-detail.html" class="btn btn-primary">
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'add_cart' single_product.id %}" class="btn btn-primary">
               <span class="text">Agregar al shopping cart</span>
               <i class="bi bi-cart"></i>
             </a>
+            {% else %}
+            {% endif %}
+            
             {% endif %}
           </article>
           <!-- product-info-aside .// -->
@@ -104,7 +108,7 @@
         <article class="box mb-3">
           <div class="icontext w-100">
             <img
-              src="./images/avatars/avatar1.jpg"
+              src="{% static 'media/img/avatars/avatar1.jpg' %}"
               class="img-xs icon rounded-circle"
             />
             <div class="text">
