--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -164,7 +164,10 @@
                   </div>
                   <!-- price-wrap.// -->
                 </div>
-                <a href="#" class="btn btn-block btn-success">Agregar al Carrito</a>
+                {% if request.user.is_authenticated %}
+            <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-success">Agregar al Carrito</a>
+            {% endif %}
+
               </figcaption>
             </figure>
           </div>
