--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} 
-{% load static %}
+{% load static %} 
 {% block content %}
 <section class="section-content padding-y bg">
   <div class="container">
@@ -23,9 +23,7 @@
               <var class="price h4">${{single_product.price}}</var>
             </div>
 
-            <p>
-              {{single_product.description}}
-            </p>
+            <p>{{single_product.description}}</p>
 
             <hr />
             <div class="row">
@@ -76,15 +74,29 @@
             <!-- row.// -->
             <hr />
             {% if single_product.stock <= 0 %}
-            <h5>Producto fuera de stock</h5>
-            {% else %}
-            {% if request.user.is_authenticated %}
-            <a href="{% url 'add_cart' single_product.id %}" class="btn btn-primary">
-              <span class="text">Agregar al shopping cart</span>
-              <i class="bi bi-cart"></i>
-            </a>
-            {% endif %}
-            
+              <h5>Producto fuera de stock</h5>
+            {% else %} 
+              {% if request.user.is_authenticated %} 
+                {% if in_cart %}
+                  <a href="#" class="btn btn-success">
+                    <span class="text">Producto agregado al carrito</span>
+                    <i class="bi bi-cart"></i>
+                  </a>
+                  <a href="{% url 'cart' %}" class="btn btn-outline-primary">
+                    <span class="text">Ver carrito de compras</span>
+                    <i class="bi bi-eye-fill"></i>
+                  </a>
+                {% else %}
+                  <a
+                    href="{% url 'add_cart' single_product.id %}"
+                    class="btn btn-primary"
+                  >
+                    <span class="text">Agregar al shopping cart</span>
+                    <i class="bi bi-check"></i>
+                  </a>
+
+                {% endif %} 
+              {% endif %} 
             {% endif %}
           </article>
           <!-- product-info-aside .// -->
