--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -130,7 +130,7 @@
             <a href="./place-order.html" class="btn btn-primary btn-block">
               Pagar
             </a>
-            <a href="./store.html" class="btn btn-light btn-block"
+            <a href="{% url 'store' %}" class="btn btn-light btn-block"
               >Continua comprando</a
             >
           </div>
