--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -171,6 +171,10 @@
               </figcaption>
             </figure>
           </div>
+          {% empty %}
+          <div>
+            <h2>No se encontraron resultados. Intente despues.</h2>
+          </div>
           {% endfor %}
           <!-- col.// -->
         </div>
