--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -71,13 +71,15 @@
         <!-- col.// -->
         <a href="{% url 'store' %}" class="btn btn-outline-primary">Tienda</a>
         <div class="col-lg col-md-6 col-sm-12 col">
-          <form action="#" class="search">
+          <form action="{% url 'search' %}" class="search">
             <div class="input-group w-100">
               <input
+                required
                 type="text"
                 class="form-control"
                 style="width: 60%"
-                placeholder="Search"
+                placeholder="Buscar productos"
+                name="keyword"
               />
 
               <div class="input-group-append">
