--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <title>YoyoDR | La mejor plataforma de venta de cursos</title>
+    <title>YoyoDR | La mejor plataforma de venta</title>
 
     <link
-      href="{% static 'media/img/favicon.jpg' %}"
+      href="{% static 'media/img/favicon.png' %}"
       rel="shortcut icon"
       type="image/x-icon"
     />
