--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %} 
-{% load static %} 
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 <section class="section-content padding-y bg">
   <div class="container">
     <!-- ============================ COMPONENT 1 ================================= -->
@@ -16,89 +14,68 @@
           <!-- gallery-wrap .end// -->
         </aside>
         <main class="col-md-6 border-left">
-          <article class="content-body">
-            <h2 class="title">{{single_product.product_name}}</h2>
+          <form action="{% url 'add_cart' single_product.id %}" method="get">
+            <article class="content-body">
+              <h2 class="title">{{single_product.product_name}}</h2>
 
-            <div class="mb-3">
-              <var class="price h4">${{single_product.price}}</var>
-            </div>
+              <div class="mb-3">
+                <var class="price h4">${{single_product.price}}</var>
+              </div>
 
-            <p>{{single_product.description}}</p>
+              <p>{{single_product.description}}</p>
 
-            <hr />
-            <div class="row">
-              <div class="item-option-select">
-                <h6>Choose Color</h6>
-                <div
-                  class="btn-group btn-group-sm btn-group-toggle"
-                  data-toggle="buttons"
-                >
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> Silver
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> Gray
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color checked" /> Gold
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> Black
-                  </label>
+              <hr />
+
+              <div class="row">
+                <div class="item-option-select">
+                  <h6>Seleccionar Color</h6>
+                  <select name="color" class="form-control" required>
+                    <option value="" disabled selected>Seleccione</option>
+                    
+                  {% comment %} El variation es el nombre del modelo el cual tiene la foreignkey hacia el producto, y lo llamo agregandole el _set, y asi obtengo todos los variants relacionados con el producto en particular, y como le creamos un manager (en la variable objects) a los variants con las funciones colors y tallas para retornar los variantes segun esas funciones e imprimirlos, son valores del modelo variants {% endcomment %}
+
+                    {% for i in single_product.variation_set.colors %}
+                      <option value="{{i.variation_value|lower}}">{{i.variation_value|capfirst}}</option>
+                    {% endfor %}
+                  </select>
                 </div>
               </div>
-            </div>
-            <!-- row.// -->
-            <div class="row">
-              <div class="item-option-select">
-                <h6>Select Size</h6>
-                <div
-                  class="btn-group btn-group-sm btn-group-toggle"
-                  data-toggle="buttons"
-                >
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> S
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color" checked /> M
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> L
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> XL
-                  </label>
+              <!-- row.// -->
+
+              <div class="row">
+                <div class="item-option-select">
+                  <h6>Seleccione Talla</h6>
+                  <select name="talla" class="form-control" required>
+                     <option value="" disabled selected>Seleccione</option>
+                    {% for i in single_product.variation_set.tallas %}
+                      <option value="{{i.variation_value|lower}}">{{i.variation_value|capfirst}}</option>
+                    {% endfor %}
+                  </select>
                 </div>
               </div>
-            </div>
-            <!-- row.// -->
-            <hr />
-            {% if single_product.stock <= 0 %}
+              <!-- row.// -->
+              <hr />
+              {% if single_product.stock <= 0 %}
               <h5>Producto fuera de stock</h5>
-            {% else %} 
-              {% if request.user.is_authenticated %} 
-                {% if in_cart %}
-                  <a href="#" class="btn btn-success">
-                    <span class="text">Producto agregado al carrito</span>
-                    <i class="bi bi-cart"></i>
-                  </a>
-                  <a href="{% url 'cart' %}" class="btn btn-outline-primary">
-                    <span class="text">Ver carrito de compras</span>
-                    <i class="bi bi-eye-fill"></i>
-                  </a>
-                {% else %}
-                  <a
-                    href="{% url 'add_cart' single_product.id %}"
-                    class="btn btn-primary"
-                  >
-                    <span class="text">Agregar al shopping cart</span>
-                    <i class="bi bi-check"></i>
-                  </a>
+              {% else %} {% if request.user.is_authenticated %} {% if in_cart %}
+              <a href="#" class="btn btn-success">
+                <span class="text">Producto agregado al carrito</span>
+                <i class="bi bi-cart"></i>
+              </a>
+              <a href="{% url 'cart' %}" class="btn btn-outline-primary">
+                <span class="text">Ver carrito de compras</span>
+                <i class="bi bi-eye-fill"></i>
+              </a>
+              {% else %}
+              <button type="submit" class="btn btn-primary">
+                <span class="text">Agregar al shopping cart</span>
+                <i class="bi bi-check"></i>
+              </button>
 
-                {% endif %} 
-              {% endif %} 
-            {% endif %}
-          </article>
+              {% endif %} {% endif %} {% endif %}
+            </article>
+          </form>
+
           <!-- product-info-aside .// -->
         </main>
         <!-- col.// -->
