--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} 
+{% load static %} 
+{% block content %}
 <section class="section-content padding-y bg">
   <div class="container">
     <!-- ============================ COMPONENT 1 ================================= -->
@@ -34,15 +36,17 @@
                       />
                     </div>
                     <figcaption class="info">
-                      <a href="{{cart_item.product.get_url}}" class="title text-dark"
+                      <a
+                        href="{{cart_item.product.get_url}}"
+                        class="title text-dark"
                         >{{cart_item.product.product_name}}</a
                       >
                       <p class="text-muted small">
-                        {% if cart_item.variations.all %}
+                        {% if cart_item.variations.all %} 
                         {% for item in cart_item.variations.all %}
-                        {{item.variation_category|capfirst}} : {{item.variation_value|capfirst}} <br>
-                        {% endfor %}
-                        {% endif %}
+                        {{item.variation_category|capfirst}} :
+                        {{item.variation_value|capfirst}} <br />
+                        {% endfor %} {% endif %}
                       </p>
                     </figcaption>
                   </figure>
@@ -53,7 +57,8 @@
                     <div class="input-group input-spinner">
                       <div class="input-group-prepend">
                         <a
-                          href="{% url 'remove_cart' cart_item.product.id %}"
+                        {% comment %} Para mermar o eliminar, solo le paso de mas el cartitem id {% endcomment %}
+                          href="{% url 'remove_cart' cart_item.product.id cart_item.id %}"
                           class="btn btn-light"
                           type="button"
                           id="button-minus"
@@ -67,14 +72,28 @@
                         value="{{cart_item.quantity}}"
                       />
                       <div class="input-group-append">
-                        <a
-                          href="{% url 'add_cart' cart_item.product.id %}"
-                          class="btn btn-light"
-                          type="button"
-                          id="button-plus"
+                        <form
+                          action="{% url 'add_cart' cart_item.product.id %}"
+                          method="POST"
                         >
-                          <i class="bi bi-plus-lg"></i>
-                        </a>
+                          {% csrf_token %} 
+                          {% comment %} Como voy a aumentar, si necesito obtener las variantes del cartitem actual y agregarlos al boton de + para agregar uno con esa variante {% endcomment %}
+                          {% for item in cart_item.variations.all %}
+                          <input
+                            type="hidden"
+                            name="{{item.variation_category | lower}}"
+                            value="{{item.variation_value | capfirst}}"
+                          />
+                          {% endfor %}
+
+                          <button
+                            type="submit"
+                            class="btn btn-light"
+                            id="button-plus"
+                          >
+                            <i class="bi bi-plus-lg"></i>
+                          </button>
+                        </form>
                       </div>
                     </div>
                     <!-- input-group.// -->
@@ -92,7 +111,7 @@
                 </td>
                 <td class="text-right">
                   <a
-                    href="{% url 'remove_cart_item' cart_item.product.id %}"
+                    href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}"
                     class="btn btn-danger"
                   >
                     Eliminar</a
