--- a/templates/base.html
+++ b/templates/base.html
@@ -65,14 +65,17 @@
       // jquery ready start
       $(document).ready(function () {
         // jQuery code
+        setTimeout(function () {
+          $("#message").fadeOut("slow");
+        }, 4000);
       });
       // jquery end
     </script>
   </head>
   <body>
-    {% include 'includes/navbar.html' %}
-  {% block content %}
-  {% endblock content %}
-  {% include 'includes/footer.html' %}
+    {% include 'includes/navbar.html' %} 
+    {% block content %} 
+    {% endblock content %} 
+    {% include 'includes/footer.html' %}
   </body>
 </html>
