--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,6 +3,15 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
+{% if request.GET.command == 'verification' %}
+
+<div class="container mx-auto alert alert-info" role="alert" style="max-width=380px; margin-top=100px;">
+  Muchas graficas por registrarte en nuestro portal Yoyo DR, te hemos enviado un email para confirmar tu cienta [{{request.GET.email}}]
+  Si ya verificaste tu cuenta, puedes ir al <a href="{% url 'login' %}">login</a>
+</div>
+
+{% else %}
+
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           {% include 'includes/alerts.html' %}
@@ -35,4 +44,5 @@
     
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
+    {% endif %}
 {% endblock content %}
