--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -8,7 +8,7 @@
       <header class="mb-4">
         <h4 class="card-title">Registro de Usuario</h4>
       </header>
-      <form action="{% url 'register' %}" method="POST">
+      <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="form-row">
           <div class="col form-group">
