--- a/templates/account/forgotPassword.html
+++ b/templates/account/forgotPassword.html
@@ -3,35 +3,22 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
-{% if request.GET.command == 'verification' %}
-
-<div class="container mx-auto alert alert-info" role="alert" style="max-width=380px; margin-top=100px;">
-  Muchas graficas por registrarte en nuestro portal Yoyo DR, te hemos enviado un email para confirmar tu cienta [{{request.GET.email}}]
-  Si ya verificaste tu cuenta, puedes ir al <a href="{% url 'login' %}">login</a>
-</div>
-
-{% else %}
-
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           {% include 'includes/alerts.html' %}
           <div class="card-body">
-          <h4 class="card-title mb-4">Login</h4>
-          <form action="{% url 'login' %}" method="post">
+          <h4 class="card-title mb-4">Recuperar contraseña</h4>
+          <form action="{% url 'forgotPassword' %}" method="post">
             {% csrf_token %}
               <div class="form-group">
                  <input type="email" class="form-control" placeholder="Email" name="email">
               </div> <!-- form-group// -->
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" name="password">
-              </div> <!-- form-group// -->
-              
-              <div class="form-group">
-                  <a href="{% url 'forgotPassword' %}" class="float-right">¿Olvidaste tu password?</a> 
+                  <a href="{% url 'login' %}" class="float-right">¿Ya tienes tu password? Login</a> 
                
               </div> <!-- form-group form-check .// -->
               <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                  <button type="submit" class="btn btn-primary btn-block"> Enviar  </button>
               </div> <!-- form-group// -->    
           </form>
           </div> <!-- card-body.// -->
@@ -44,5 +31,5 @@
     
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
-    {% endif %}
+
 {% endblock content %}
