--- a/templates/account/resetPassword.html
+++ b/templates/account/resetPassword.html
@@ -3,46 +3,33 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
-{% if request.GET.command == 'verification' %}
-
-<div class="container mx-auto alert alert-info" role="alert" style="max-width=380px; margin-top=100px;">
-  Muchas graficas por registrarte en nuestro portal Yoyo DR, te hemos enviado un email para confirmar tu cienta [{{request.GET.email}}]
-  Si ya verificaste tu cuenta, puedes ir al <a href="{% url 'login' %}">login</a>
-</div>
-
-{% else %}
-
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           {% include 'includes/alerts.html' %}
           <div class="card-body">
-          <h4 class="card-title mb-4">Login</h4>
+          <h4 class="card-title mb-4">Resetear password</h4>
           <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
+
               <div class="form-group">
-                 <input type="email" class="form-control" placeholder="Email" name="email">
+                 <input type="password" class="form-control" placeholder="Crear Password" name="password">
               </div> <!-- form-group// -->
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" name="password">
+                 <input type="password" class="form-control" placeholder="Confirmar Password" name="confirm_password">
               </div> <!-- form-group// -->
-              
               <div class="form-group">
-                  <a href="{% url 'forgotPassword' %}" class="float-right">¿Olvidaste tu password?</a> 
-               
-              </div> <!-- form-group form-check .// -->
-              <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                  <button type="submit" class="btn btn-primary btn-block"> Resetear  </button>
               </div> <!-- form-group// -->    
           </form>
           </div> <!-- card-body.// -->
         </div> <!-- card .// -->
     
-         <p class="text-center mt-4">¿No tienes una cuenta? <a href="{% url 'register' %}">Registrate</a></p>
+         <p class="text-center mt-4">¿No tienes una cuenta?<a href="{% url 'register' %}">Registrate</a></p>
          <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
     
     
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
-    {% endif %}
+
 {% endblock content %}
