arreglando bug de cambio de contraseña

--- a/templates/account/resetPassword.html
+++ b/templates/account/resetPassword.html
@@ -8,9 +8,8 @@
           {% include 'includes/alerts.html' %}
           <div class="card-body">
           <h4 class="card-title mb-4">Resetear password</h4>
-          <form action="{% url 'login' %}" method="post">
+          <form action="{% url 'resetPassword' %}" method="post">
             {% csrf_token %}
-
               <div class="form-group">
                  <input type="password" class="form-control" placeholder="Crear Password" name="password">
               </div> <!-- form-group// -->
