--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -9,6 +9,7 @@
           <div class="card-body">
             <h4 class="card-title mb-4">Direccion de facturación</h4>
             <form action="" method="post">
+              {% csrf_token %}
               <div class="form-row">
                 <div class="col form-group">
                   <label for="">Nombre</label>
@@ -70,7 +71,7 @@
                   class="form-control"
                 ></textarea>
               </div>
-            </form>
+            
           </div>
         </div>
         <!-- card.// -->
@@ -131,12 +132,13 @@
                 {% endfor %}
               </tbody>
             </table>
-            <a href="./place-order.html" class="btn btn-primary btn-block">
-              Pagar
-            </a>
+            <button type="submit" name="submit" class="btn btn-primary btn-block">
+              Ordenar los productos
+            </button>
             <a href="{% url 'store' %}" class="btn btn-light btn-block"
               >Continua comprando</a
             >
+            </form>
           </div>
           <!-- card-body.// -->
         </div>
