--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -58,12 +58,12 @@
               <hr />
               {% if single_product.stock <= 0 %}
               <h5>Producto fuera de stock</h5>
-              {% else %} {% if request.user.is_authenticated %} 
+              {% else %}  
               <button type="submit" class="btn btn-primary">
                 <span class="text">Agregar al shopping cart</span>
                 <i class="bi bi-check"></i>
               </button>
-               {% endif %} {% endif %}
+              {% endif %}
             </article>
           </form>
 
