--- a/templates/orders/payment.html
+++ b/templates/orders/payment.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %} 
-{% load static %} 
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 <section class="section-content padding-y bg">
   <div class="container">
     <!-- ============================ COMPONENT 1 ================================= -->
@@ -16,8 +14,7 @@
             <p class="card-text mb-0">{{order.email}}</p>
             <p class="card-text mb-0">{{order.phone}}</p>
             {% if order.order_note %}
-            <b> Detalle de la orden:</b> {{order.order_note}} 
-            {% endif %}
+            <b> Detalle de la orden:</b> {{order.order_note}} {% endif %}
           </div>
         </div>
         <!-- card.// -->
@@ -58,11 +55,10 @@
                         >
                         <p class="text-muted small">
                           {% if cart_item.variations.all %} 
-                            {% for item in cart_item.variations.all %}
-                              {{item.variation_category|capfirst}} :
-                              {{item.variation_value|capfirst}} <br />
-                            {% endfor %} 
-                          {% endif %}
+                          {% for item in cart_item.variations.all %}
+                          {{item.variation_category|capfirst}} :
+                          {{item.variation_value|capfirst}} <br />
+                          {% endfor %} {% endif %}
                         </p>
                       </figcaption>
                     </figure>
@@ -127,6 +123,7 @@
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 {% endblock content %} {% block js %}
+
 <script>
   // Render the PayPal button into #paypal-button-container
   paypal
@@ -140,71 +137,31 @@
 
       // Call your server to set up the transaction
       createOrder: function (data, actions) {
-        return fetch("/demo/checkout/api/paypal/order/create/", {
-          method: "post",
-        })
-          .then(function (res) {
-            return res.json();
-          })
-          .then(function (orderData) {
-            return orderData.id;
-          });
+        return actions.order.create({
+          purchase_units: [
+            {
+              amount: {
+                value: "88.44",
+              },
+            },
+          ],
+        });
       },
 
       // Call your server to finalize the transaction
       onApprove: function (data, actions) {
-        return fetch(
-          "/demo/checkout/api/paypal/order/" + data.orderID + "/capture/",
-          {
-            method: "post",
-          }
-        )
-          .then(function (res) {
-            return res.json();
-          })
-          .then(function (orderData) {
-            // Three cases to handle:
-            //   (1) Recoverable INSTRUMENT_DECLINED -> call actions.restart()
-            //   (2) Other non-recoverable errors -> Show a failure message
-            //   (3) Successful transaction -> Show confirmation or thank you
-
-            // This example reads a v2/checkout/orders capture response, propagated from the server
-            // You could use a different API or structure for your 'orderData'
-            var errorDetail =
-              Array.isArray(orderData.details) && orderData.details[0];
-
-            if (errorDetail && errorDetail.issue === "INSTRUMENT_DECLINED") {
-              return actions.restart(); // Recoverable state, per:
-              // https://developer.paypal.com/docs/checkout/integration-features/funding-failure/
-            }
-
-            if (errorDetail) {
-              var msg = "Sorry, your transaction could not be processed.";
-              if (errorDetail.description)
-                msg += "\n\n" + errorDetail.description;
-              if (orderData.debug_id) msg += " (" + orderData.debug_id + ")";
-              return alert(msg); // Show a failure message (try to avoid alerts in production environments)
-            }
-
-            // Successful capture! For demo purposes:
-            console.log(
-              orderData
-            );
-            var transaction = orderData.purchase_units[0].payments.captures[0];
-            alert(
-              "Transaction " +
-                transaction.status +
-                ": " +
-                transaction.id +
-                "\n\nSee console for all available details"
-            );
-
-            // Replace the above to show a success message within this page, e.g.
-            // const element = document.getElementById('paypal-button-container');
-            // element.innerHTML = '';
-            // element.innerHTML = '<h3>Thank you for your payment!</h3>';
-            // Or go to another URL:  actions.redirect('thank_you.html');
-          });
+        return actions.order.capture().then(function (orderData) {
+          // Successful capture! For demo purposes:
+          console.log(orderData);
+          var transaction = orderData.purchase_units[0].payments.captures[0];
+          alert(
+            "transaction " +
+              transaction.status +
+              ": " +
+              transaction.id +
+              "\n\nSee console for all available"
+          );
+        });
       },
     })
     .render("#paypal-button-container");
