--- a/templates/orders/payment.html
+++ b/templates/orders/payment.html
@@ -125,8 +125,26 @@
 {% endblock content %} {% block js %}
 
 <script>
-  // Render the PayPal button into #paypal-button-container
-  var amount = {{grand_total}}
+  function getCookie(name){
+    let cookieValue=null;
+    if (document.cookie && document.cookie!==''){
+      const cookies = document.cookie.split(';')
+      for (let i=0;i<cookies.length;i++) {
+        const cookie = cookies[i].trim()
+        if (cookie.substring(0,name.length + 1)===(name+'=')){
+          cookieValue=decodeURIComponent(cookie.substring(name.length+1))
+          break
+        }
+      }
+    }
+    return cookieValue;
+  }
+
+  var amount = "{{grand_total}}"
+  var url = "{% url 'payments' %}"
+  var csrftoken = getCookie('csrftoken')
+  var orderID = "{{order.order_number}}"
+  var payment_method = "PayPal"
   paypal
     .Buttons({
       style: {
@@ -154,14 +172,24 @@
         return actions.order.capture().then(function (orderData) {
           // Successful capture! For demo purposes:
           console.log(orderData);
-          var transaction = orderData.purchase_units[0].payments.captures[0];
-          alert(
-            "transaction " +
-              transaction.status +
-              ": " +
-              transaction.id +
-              "\n\nSee console for all available"
-          );
+          sendData()
+          function sendData(){
+            fetch(url,{
+              method:"POST",
+              headers:{
+                "Content-Type":"application/json",
+                "X-CSRFToken":csrftoken
+              },
+              body:JSON.stringify({
+                orderID:orderID,
+                transID:orderData.id,
+                payment_method:payment_method,
+                status:orderData.status
+              }),
+            })
+            .then(reponse => reponse.json())
+            .then(data => console.log(data))
+          }
         });
       },
     })
