--- a/templates/orders/payment.html
+++ b/templates/orders/payment.html
@@ -145,6 +145,7 @@
   var csrftoken = getCookie('csrftoken')
   var orderID = "{{order.order_number}}"
   var payment_method = "PayPal"
+  var redirect_url = "{% url 'order_complete' %}"
   paypal
     .Buttons({
       style: {
@@ -188,7 +189,9 @@
               }),
             })
             .then(reponse => reponse.json())
-            .then(data => console.log(data))
+            .then((data) => {
+              window.location.href=redirect_url + '?order_number='+data.order_number+'&payment_id='+data.transID
+            })
           }
         });
       },
