--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
       type="text/css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- custom style -->
     <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
@@ -55,6 +56,7 @@
       rel="stylesheet"
       media="only screen and (max-width: 1200px)"
     />
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
 
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
