--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -33,3 +33,7 @@ input:checked ~ label, label:hover ~label{
 input:checked + label:hover, input:checked ~ label:hover, input:checked ~ label:hover ~label,label:hover ~input:checked ~label{
   color: #cc9000;
 }
+
+.rating-start i {
+  color: #ffb503 !important
+} 
