--- a/templates/account/edit_profile.html
+++ b/templates/account/edit_profile.html
@@ -22,7 +22,7 @@
                 style="border-radius: 40%"
               />
               <div class="row">
-                <form action="{% url 'edit_profile' %}" method="post" enctype="multipart/form-data">
+                <form action="{% url 'edit_profile' %}" method="post" enctype="multipart/form-data" class="w-100 mt-3 d-flex flex-column">
                   {% csrf_token %}
 
 
@@ -77,7 +77,7 @@
                     </div>
                   </div>
 
-                  <button type="submit" class="btn btn-primary">Guardar</button>
+                  <button type="submit" class="btn btn-primary w-50 align-self-center">Guardar</button>
 
                 </form>
               </div>
