--- a/templates/account/edit_profile.html
+++ b/templates/account/edit_profile.html
@@ -16,7 +16,7 @@
           <div class="card-body">
             <div class="text-right">
               <img
-                src="{{userprofile.profile_picture.url}}"
+                src="{{userprofile.get_profile_picture}}"
                 alt="Imagen de perfil"
                 width="100"
                 style="border-radius: 40%"
