--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
 {% if request.GET.command == 'verification' %}
 
 <div class="container mx-auto alert alert-info" role="alert" style="max-width=380px; margin-top=100px;">
-  Muchas graficas por registrarte en nuestro portal Yoyo DR, te hemos enviado un email para confirmar tu cienta [{{request.GET.email}}]
+  Muchas graficas por registrarte en nuestro portal Yoyo DR, te hemos enviado un email para confirmar tu cuenta [{{request.GET.email}}]
   Si ya verificaste tu cuenta, puedes ir al <a href="{% url 'login' %}">login</a>
 </div>
 
