--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -21,7 +21,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Total de ordenes</h5>
                     <h4>{{orders_count}}</h4>
-                    <a href="">Ver ordenes</a>
+                    <a href="{% url 'my_orders' %}">Ver ordenes</a>
                   </div>
                 </div>
               </div>
