--- a/templates/includes/dashboard_sidebar.html
+++ b/templates/includes/dashboard_sidebar.html
@@ -4,7 +4,8 @@
                 <a class="list-group-item {% if '/accounts/' == request.path or '/accounts/dashboard/' == request.path %}active{% endif %}" href="{% url 'dashboard' %}"> Dashboard </a>
                 <a class="list-group-item {% if '/my_orders/' in request.path %}active{% endif %}" href="{% url 'my_orders' %}"> Mis ordenes </a>
                 <a class="list-group-item {% if '/edit_profile/' in request.path %}active{% endif %}" href="{% url 'edit_profile' %}"> Editar perfil </a>
-                <a class="list-group-item" href="#">Cambiar contraseña </a>
+
+                <a class="list-group-item {% if '/change_password/' in request.path %}active{% endif %}" href="{% url 'change_password' %}">Cambiar contraseña </a>
             </ul>
             <br>
             <a class="btn btn-light btn-block" href="{% url 'logout' %}"> <i class="bi bi-box-arrow-right"></i> <span class="text">Salir de sesion</span> </a> 
