--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -36,4 +36,20 @@ input:checked + label:hover, input:checked ~ label:hover, input:checked ~ label:
 
 .rating-start i {
   color: #ffb503 !important
-} 
+}
+
+ul.thumb {
+  margin: 0 auto;
+  padding: 0;
+  float: left;
+}
+ul.thumb li {
+  list-style: none;
+  margin: 10px;
+}
+
+ul.thumb li img{
+  height: 80px;
+  width: auto;
+  border: 1px solid grey;
+}
